MVC Implemented Formatted